--- a/INDEX.html
+++ b/INDEX.html
@@ -42,6 +42,23 @@
                     </div>
                 </div>
             </div>
+            <div class="col">
+                <img src="images/sunrise.png" alt="">
+                    <div>
+                        <p class="sunrise">--:--</p>
+                        <p>Sunrise</p>
+                    </div>
+            </div>
+            <div class="col">
+                <img src="images/sunset.png" alt="">
+                <div>
+                    <p class="sunset">--:--</p>
+                    <p>Sunset</p>
+                </div>
+            </div>
+            <!-- 5-Day Forecast -->
+            <h3 class="forecast-title">5-Day Forecast</h3>
+            <div class="forecast" id="forecast"></div>
         </div>
     </div>
     <script src="script.js"></script>
